--- a/index.html
+++ b/index.html
@@ -4,50 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Short resume</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <h1>Short resume</h1>
-    <div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-            aliqua. Non tellus orci ac auctor augue mauris augue neque gravida. Quam vulputate dignissim suspendisse in est ante
-             in. Consectetur adipiscing elit ut aliquam purus sit amet luctus venenatis. Ac ut consequat semper viverra nam libero.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-            aliqua. Non tellus orci ac auctor augue mauris augue neque gravida. Quam vulputate dignissim suspendisse in est ante
-             in. Consectetur adipiscing elit ut aliquam purus sit amet luctus venenatis. Ac ut consequat semper viverra nam libero.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-            Dignissim enim sit amet venenatis urna. Accumsan tortor posuere ac ut consequat semper viverra. Est ante in nibh mauris. 
-            Integer quis auctor elit sed vulputate mi sit amet mauris. Orci dapibus ultrices in iaculis nunc sed augue lacus viverra. 
-            Neque laoreet suspendisse interdum consectetur libero id. Urna condimentum mattis pellentesque id nibh tortor id. Dui id 
-            ornare arcu odio ut sem nulla pharetra. Ornare arcu odio ut sem. Id interdum velit laoreet id.
-            Viverra mauris in aliquam sem fringilla. Convallis convallis tellus id interdum velit. Id semper risus in hendrerit gravida 
-            rutrum quisque non. Interdum varius sit amet mattis vulputate enim nulla aliquet. Ullamcorper velit sed ullamcorper morbi 
-            tincidunt ornare massa eget egestas. Massa vitae tortor condimentum lacinia quis vel eros donec ac. Urna porttitor rhoncus 
-            dolor purus non enim praesent elementum facilisis. Lacinia at quis risus sed vulputate odio ut. Sagittis id consectetur purus 
-            ut faucibus pulvinar elementum integer. Eget nunc scelerisque viverra mauris in. Eget egestas purus viverra accumsan. Sit 
-            amet nulla facilisi morbi tempus iaculis. Suspendisse sed nisi lacus sed viverra tellus. Volutpat est velit egestas dui id 
-            ornare arcu odio. Eu augue ut lectus arcu bibendum at varius. Tempus imperdiet nulla malesuada pellentesque. Suscipit 
-            adipiscing bibendum est ultricies integer. Urna porttitor rhoncus dolor purus non enim. Neque convallis a cras semper 
-            auctor neque. Aliquam sem et tortor consequat id porta nibh venenatis cras.
-            A condimentum vitae sapien pellentesque habitant morbi tristique senectus. Auctor augue mauris augue neque gravida in fermentum. 
-            Nulla facilisi cras fermentum odio eu feugiat pretium nibh ipsum. Elementum integer enim neque volutpat. Varius duis at 
-            consectetur lorem donec massa sapien faucibus. Urna et pharetra pharetra massa. Id aliquet risus feugiat in ante metus 
-            dictum at. Curabitur gravida arcu ac tortor dignissim. Nec feugiat in fermentum posuere urna nec tincidunt. Sed faucibus 
-            turpis in eu mi bibendum neque egestas. Tellus in hac habitasse platea. Luctus venenatis lectus magna fringilla urna porttitor.
-            Sed adipiscing diam donec adipiscing tristique. Mauris vitae ultricies leo integer malesuada nunc vel. Sit amet purus gravida 
-            quis. Urna cursus eget nunc scelerisque. Faucibus vitae aliquet nec ullamcorper sit. Adipiscing elit duis tristique 
-            sollicitudin nibh sit amet commodo nulla. Nunc mi ipsum faucibus vitae. Ut consequat semper viverra nam libero justo. 
-            Praesent elementum facilisis leo vel fringilla est. Urna cursus eget nunc scelerisque viverra mauris in. Feugiat sed 
-            lectus vestibulum mattis ullamcorper velit sed ullamcorper. In egestas erat imperdiet sed euismod nisi porta lorem mollis.
-             Magna etiam tempor orci eu. Faucibus turpis in eu mi bibendum neque egestas congue.
-            Nunc mattis enim ut tellus elementum sagittis vitae. Ac tincidunt vitae semper quis lectus nulla. Sit amet tellus cras 
-            adipiscing enim. Adipiscing at in tellus integer feugiat scelerisque varius morbi enim. Lacus laoreet non curabitur 
-            gravida arcu. Id eu nisl nunc mi ipsum faucibus. Aenean et tortor at risus viverra adipiscing. Adipiscing diam donec
-             adipiscing tristique risus nec feugiat in. Fusce ut placerat orci nulla pellentesque dignissim. Viverra aliquet eget 
-             sit amet tellus cras adipiscing enim eu. Ac tincidunt vitae semper quis lectus nulla at volutpat. Sagittis eu volutpat 
-             odio facilisis mauris sit. Malesuada fames ac turpis egestas maecenas pharetra convallis posuere morbi. Pulvinar elementum 
-             integer enim neque volutpat ac tincidunt vitae.</p>
-    </div>
+    <div class="row">
+        <div class="column" style="background-color:#aaa;">
+          <h2>Column 1</h2>
+          <p>Some text..</p>
+        </div>
+        <div class="column" style="background-color:#bbb;">
+          <h2>Column 2</h2>
+          <p>Some text..</p>
+        </div>
+        <div class="column" style="background-color:#ccc;">
+          <h2>Column 3</h2>
+          <p>Some text..</p>
+        </div>
+      </div>
 </body>
 </html>
