Final commit, i guess

--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
 </head>
 <body>
   <h1>Maksym Yalovitsa</h1>
-  <p>Back-end Node.js developer. Student. P2P volunteer. Lorem ipsum dolor sit amet, consectetur 
+  <p> <img src="https://img.freepik.com/premium-photo/programmer-working-laptop-computer-office-studio_90781-	262.jpg?w=740" alt="Programmer">
+    Back-end Node.js developer. Student. P2P volunteer. Lorem ipsum dolor sit amet, consectetur 
     adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim 
     ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
     consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu 
     fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui 
-    officia deserunt mollit anim id est laborum.</p> 
+    officia deserunt mollit anim id est laborum.
+  </p>
   <p class="contacts">maksym.yalovitsa@gmail.com</p>
 </body>
 </html>
