One more commit

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Edu+SA+Beginner&display=swap" rel="stylesheet">
 </head>
-<body>
+<body> <img src="https://img.freepik.com/premium-photo/programmer-working-laptop-computer-office-studio_90781-	262.jpg?w=740" alt="Programmer">
   <h1>Maksym Yalovitsa</h1>
-  <p> <img src="https://img.freepik.com/premium-photo/programmer-working-laptop-computer-office-studio_90781-	262.jpg?w=740" alt="Programmer">
+  <p> 
     Back-end Node.js developer. Student. P2P volunteer. Lorem ipsum dolor sit amet, consectetur 
     adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim 
     ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
